# MiAPR_benchmark

./: .gitignore  CLAUDE.md  HANDOFF.md  METHODOLOGY.md  Makefile  README.md  RUN.md  benchmark.yaml  podsumowanie.md  raport.md  readme.md  requirements.txt  run_benchmark.launch.py  task.txt  testowanie_wybranych_moveit_ros_benchmarks.md  ur.repos
.old /benchmark/tests/: test_adapters_pipeline.py  test_collision_generation.py  test_geometry.py  test_kinematics.py  test_metrics.py  test_scenario.py
benchmark/: README.md  pyproject.toml
benchmark/mb_benchmark/: __init__.py  analysis.py  cli.py  collision.py  config.py  generation.py  geometry.py  kinematics.py  metrics.py  runner.py  scenario.py
benchmark/mb_benchmark/adapters/: __init__.py  base.py  curobo_adapter.py  moveit_adapter.py  synthetic_adapter.py  template_adapter.py
config/: planners.yaml
config/robot/: README.md
docker/: Dockerfile.curobo  Dockerfile.ros  docker-compose.yml
docker/entrypoints/: curobo.sh  ros.sh
results/report/: metrics.csv  summary.csv  summary.txt
ros2_ws/src/mb_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/mb_bringup/launch/: gazebo.launch.py  sim.launch.py
ros2_ws/src/mb_bringup/rviz/: README.md
ros2_ws/src/mb_moveit_benchmarks/: CMakeLists.txt  package.xml
ros2_ws/src/mb_moveit_benchmarks/config/: benchmark.yaml
ros2_ws/src/mb_moveit_benchmarks/launch/: benchmark.launch.py
ros2_ws/src/mb_moveit_benchmarks/scripts/: populate_warehouse.py  process_results.sh
scripts/: load_scene.py  run_harness.sh  run_moveit_benchmark.sh  run_simulation.sh  setup_offline.sh
