[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mb_benchmark"
version = "0.1.0"
description = "Cross-framework manipulator motion-planning benchmark harness (MoveIt + cuRobo + custom)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    # <2: torch 2.2.2 (cuRobo image) is built against the NumPy 1.x C-API and fails with
    # "Failed to initialize NumPy: _ARRAY_API not found" under NumPy 2. moveit_py (Jazzy,
    # NumPy 1.26) and the offline core are fine with <2, so we pin it for everyone.
    "numpy>=1.21,<2",
    "PyYAML>=5.4",
    "pandas>=1.3",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
# Heavy / environment-specific extras. NOT needed for the offline test suite.
analysis = ["seaborn>=0.12"]
dev = ["pytest>=7.0"]

[project.scripts]
mb-benchmark = "mb_benchmark.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mb_benchmark*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
