<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://relaxng.org/ns/structure/1.0"?>
<package format="3">
  <name>mb_moveit_benchmarks</name>
  <version>0.1.0</version>
  <description>
    Pipeline A: standard MoveIt planner benchmarking via moveit_ros_benchmarks
    (warehouse scenes/queries -> moveit_run_benchmark -> OMPL log -> Planner Arena).
  </description>
  <maintainer email="julian.mikolajczak@onet.pl">MiAPR</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_benchmarks</exec_depend>
  <exec_depend>moveit_ros_warehouse</exec_depend>
  <exec_depend>warehouse_ros_mongo</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
